Issue #41 - Fix about dialog on Linux.
Hopefully this doesn't look awful on Windows...

--- a/mail/base/content/aboutDialog.css
+++ b/mail/base/content/aboutDialog.css
@@ -50,8 +50,9 @@
 
 .text-blurb {
   margin-bottom: 10px;
-  margin-right: 20px;
-  word-wrap: break-word;
+  margin-right: 80px;
+  word-break: break-word;
+  font-size: 13px;
   color: #ffffff;
   margin-inline-start: 0;
   padding-inline-start: 0;
@@ -77,6 +78,7 @@
 .trademark-label,
 .text-link,
 .text-link:focus {
+  font-size: 13px;
   margin: 0px;
   padding: 0px;
 }
