--- a/other-licenses/branding/epyrus/content/aboutDialog.css
+++ b/other-licenses/branding/epyrus/content/aboutDialog.css
@@ -25,7 +25,7 @@
 }
 
 #bottomBox {
-  margin-top: 80px;
+  margin-top: 60px;
   background-color: #e8d84f;
   color: #000000;
 }
